correct message added and margin on mobile at bottom

--- a/public/my-styles/game-style.css
+++ b/public/my-styles/game-style.css
@@ -79,7 +79,7 @@ input[type="radio"] {
 
 button {
   height: 2em;
-  margin-top: 0.5em;
+  margin: 0.5em 0em 1em;
   cursor: pointer;
   font-size: 0.5em;
   font-weight: 700;
